objects/DandB_ScoreMeasureType__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_ScoreMeasureType</relationshipLabel>
        <relationshipName>DandB_ScoreMeasureType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MeasureType__c</fullName>
        <label>MeasureType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DandB_ScoreMeasureType</label>
    <nameField>
        <label>DanBScoreMeasureType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_ScoreMeasureType</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>